--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,12 +2,15 @@
 <ul id="nav">
 	<li id="ajax"><a href="{{ root_url }}/index.html">Home</a></li>
 	<li id="ajax"><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
-    <li><a href="{{ root_url }}/atom.xml">RSS</a></li>
+    <li><a href="http://solarex.github.io/wiki">Wiki</a></li>
+    <li id="ajax"><a href="{{ root_url }}/about">About</a></li>
+    <li><a href="http://solarex.github.io/resume">Resume</a></li>
     {% if site.simple_search %}
     <li>
     <div id="dark">
-        <form method="get" action="{{ root_url }}/search.html" id="search">
-            <input name="query" type="text" placeholder="Search..." x-webkit-speech />
+        <form method="get" action="http://google.com/search" id="search">
+            <input type="hidden" name="q" value="site:solarex.github.io">
+            <input name="q" type="text" results="0" placeholder="Search..." x-webkit-speech />
         </form>
     </div>
     </li>
