add project navigation

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,7 +3,7 @@
 	<li id="ajax"><a href="{{ root_url }}/index.html">Home</a></li>
 	<li id="ajax"><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
     <li><a href="http://solarex.github.io/wiki">Wiki</a></li>
-    <li id="ajax"><a href="{{ root_url }}/about">About</a></li>
+    <li id="ajax"><a href="{{ root_url }}/projects">Project</a></li>
     <li><a href="http://solarex.github.io/resume">Resume</a></li>
     {% if site.simple_search %}
     <li>
